# broken-animation-loading

./: .gitignore  Cargo.toml  ambient.toml
assets/: X Bot.fbx  landing.fbx  pipeline.toml
src/: server.rs
