[package]
name = "tst"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "89a8904c" }

[[bin]]
name = "client_tst"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_tst"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]